--- a/style.css
+++ b/style.css
@@ -1,18 +1,81 @@
-body {background-color: #E9FCD7;
-font-family: Georgia, serif;
+body {
+	background-color: #E9FCD7;
+	font-family: Georgia, serif;
+	padding-left: 200px;
+	padding-right: 200px;
+	background-image:url("B4.png");
+	background-repeat: no-repeat;
+	background-size:100%;
 }
-h1 {background-color: #89D78A;
-font-size: 30px;
-color: #534B39;
+
+lef{
+	float: left;
+	width: 200px
 }
-h2 {background-color: #D7E9FC;
-font-size: 20px;
-color: #556E8A;
-border: double;
-border-color: indigo;
+
+righ{
+	float: left;
+	width: 200px
+	
 }
-p {background-color: #D7FCD8;
-font-size: 16px;
-border: solid;
-border-color: #5F543E;
+	
+cent{
+	float: left;
+	width: 300px
+}
+
+.center{
+	display: block;
+	margin-left:auto;
+	margin-right: auto;
+	width:25%;
+}
+
+table{
+	border: no-border;
+	height: 300px}
+
+h1 {
+	background-color: #89D78A;
+	font-size: 30px;
+	color: #534B39;
+	text-align: center
+}
+
+td, th {
+	border:no-border;
+	font-size: 30px;
+	color: #534B39;
+	text-align: center}
+	
+h2 {
+	background-color: #D7E9FC;
+	font-size: 32px;
+	color: #556E8A;
+	border: double;
+	border-color: indigo;
+	text-align: center;
+}
+
+h3 {
+	text-align: center;
+	border: solid;
+	border-color: gray
+}
+
+p {
+	font-size: 16px;
+	border-color: #5F543E;
+	margin-left: 100px;
+	margin-right: 100px
+}
+
+h2{
+	margin-left: 100px;
+	margin-right: 100px
+}
+
+footer{
+	text-align: center;
+	display: block;
 }
