--- a/style.css
+++ b/style.css
@@ -36,10 +36,10 @@ table{
 	height: 300px}
 
 h1 {
-	background-color: #89D78A;
 	font-size: 30px;
 	color: #534B39;
-	text-align: center
+	text-align: center;
+	height: 23px
 }
 
 td, th {
@@ -49,12 +49,10 @@ td, th {
 	text-align: center}
 	
 h2 {
-	background-color: #D7E9FC;
-	font-size: 32px;
+	font-size: 30px;
 	color: #556E8A;
-	border: double;
-	border-color: indigo;
 	text-align: center;
+	height: 23px
 }
 
 h3 {
@@ -66,8 +64,7 @@ h3 {
 p {
 	font-size: 16px;
 	border-color: #5F543E;
-	margin-left: 100px;
-	margin-right: 100px
+
 }
 
 h2{
@@ -78,4 +75,44 @@ h2{
 footer{
 	text-align: center;
 	display: block;
+}
+
+nav {
+    border-bottom: 1px solid #4bb477;
+	
+}
+
+ul {
+	list-style-type:none;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	text-align: center;
+	background-color: #4bb477;
+	height: 42px
+}
+
+li {
+	display: inline;
+	float: left
+}
+
+li a {
+	display: block;
+	color:white;
+	text-align: center;
+	padding: 14px 86px;
+	text-decoration: none;
+	height: 15px;
+}
+
+
+
+li a:hover {
+	background-color: #111
+}
+
+ul a.active {
+	background-color: #625e5f;
+	color: white;
 }
